--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,25 +1,27 @@
 buildscript {
     repositories {
+        google()
         jcenter()
     }
 
     dependencies {
-        //noinspection GradleDependency
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.1.0'
     }
 }
+
+def DEFAULT_COMPILE_SDK_VERSION             = 25
+def DEFAULT_BUILD_TOOLS_VERSION             = "25.0.1"
+def DEFAULT_TARGET_SDK_VERSION              = 23
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    //noinspection GradleDependency
-    buildToolsVersion "23.0.1"
+    compileSdkVersion rootProject.hasProperty('compileSdkVersion') ? rootProject.compileSdkVersion : DEFAULT_COMPILE_SDK_VERSION
+    buildToolsVersion rootProject.hasProperty('buildToolsVersion') ? rootProject.buildToolsVersion : DEFAULT_BUILD_TOOLS_VERSION
 
     defaultConfig {
         minSdkVersion 16
-        //noinspection OldTargetApi
-        targetSdkVersion 22
+        targetSdkVersion rootProject.hasProperty('targetSdkVersion') ? rootProject.targetSdkVersion : DEFAULT_TARGET_SDK_VERSION
         versionCode 1
         versionName "1.0"
     }
@@ -38,6 +40,5 @@ repositories {
 }
 
 dependencies {
-    //noinspection GradleDynamicVersion
-    compile 'com.facebook.react:react-native:+'
+    compileOnly 'com.facebook.react:react-native:+'
 }
